--- a/_includes/themes/twitter-2.0/default.html
+++ b/_includes/themes/twitter-2.0/default.html
@@ -15,7 +15,7 @@
     <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css" media="screen">
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        padding-top: 0px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
     <link href="{{ ASSET_PATH }}/css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -59,10 +59,10 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012
+<!--         <p>&copy; {{ site.author.name }} 2012
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-        </p>
+        </p> -->
       </footer>
 
     </div> <!-- /container -->
