--- a/assets/themes/twitter-2.0/css/bootstrap.css
+++ b/assets/themes/twitter-2.0/css/bootstrap.css
@@ -106,6 +106,7 @@ textarea {
 }
 body {
   margin: 0;
+  padding-top:0px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -305,7 +306,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin-top: 0;
   font-weight: bold;
   color: #333333;
   text-rendering: optimizelegibility;
