--- a/_includes/themes/twitter-2.0/2col.html
+++ b/_includes/themes/twitter-2.0/2col.html
@@ -1,6 +1,8 @@
-<!-- <div class="page-header">
+<div class="page-header">
   <h1>{{ page.title }} <small></small></h1>
-</div> -->
+</div>
+
+
 
 <div class="row">
   <div class="span3">
