--- a/assets/themes/twitter-2.0/css/style.css
+++ b/assets/themes/twitter-2.0/css/style.css
@@ -62,3 +62,112 @@ html, body {
   border:1px solid #4C964D;
   color:#FFF;
 }
+
+/* custom edits by gnarmis */
+html, body {
+  background-color: #eee;
+}
+
+.navbar {
+  margin-bottom:0;
+} 
+
+.navbar-inner {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+
+.jumbotron h1 {
+  color: #fff;
+}
+
+/* from docs.css from bootstrap  */
+
+/* Jumbotrons
+-------------------------------------------------- */
+
+/* Base class
+------------------------- */
+.jumbotron {
+  position: relative;
+  padding: 50px 0;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
+  background: #4D146B; /* Old browsers */
+  background: -moz-linear-gradient(45deg,  #4D146B 0%, #7E21B0 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#4D146B), color-stop(100%,#7E21B0)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(45deg,  #4D146B 0%,#7E21B0 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(45deg,  #4D146B 0%,#7E21B0 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(45deg,  #4D146B 0%,#7E21B0 100%); /* IE10+ */
+  background: linear-gradient(45deg,  #4D146B 0%,#7E21B0 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4D146B', endColorstr='#7E21B0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+     -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+          box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+}
+.jumbotron h1 {
+  font-size: 80px;
+  font-weight: bold;
+  letter-spacing: -1px;
+  line-height: 1;
+}
+.jumbotron p {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+
+/* Link styles (used on .masthead-links as well) */
+.jumbotron a {
+  color: #fff;
+  color: rgba(255,255,255,.5);
+  -webkit-transition: all .2s ease-in-out;
+     -moz-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
+}
+.jumbotron a:hover {
+  color: #fff;
+  text-shadow: 0 0 10px rgba(255,255,255,.25);
+}
+
+
+/* Social proof buttons from GitHub & Twitter */
+.bs-docs-social {
+  padding: 15px 0;
+  text-align: center;
+  background-color: #f5f5f5;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #ddd;
+}
+
+/* Quick links on Home */
+.bs-docs-social-buttons {
+  margin-left: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+}
+.bs-docs-social-buttons li {
+  display: inline-block;
+  padding: 5px 8px;
+  line-height: 1;
+  *display: inline;
+  *zoom: 1;
+}
+
+
+/* vertically aligning tweet and facebook buttons */
+
+.follow-btn,
+.tweet-btn {
+  vertical-align: text-top;
+}
+
+.facebook-btn {
+  vertical-align: text-top;
+}
+
