--- a/_includes/themes/twitter-2.0/imo-hackathon.html
+++ b/_includes/themes/twitter-2.0/imo-hackathon.html
@@ -20,6 +20,12 @@
     <li><a href="#rules">Rules</a></li>
     <li><a href="#about_hacknorthwestern">About HackNorthwestern</a></li>
     <li><a href="#about_the_sponsor">About the Sponsor</a></li>
+    <p></p>
+    <p></p>
+    <section id="eventbrite-register-for-hackathon">
+      <h3 style="color:orange">Register Now</h3>
+  <div style="width:195px; text-align:center;" ><iframe  src="http://www.eventbrite.com/countdown-widget?eid=4507728738" frameborder="0" height="513" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:195px; text-align:center;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/ecount">Sell Tickets Online</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=ecount">Eventbrite</a></div></div>
+  </section>
   </ul>
   </div>
   <div class="span8">
