--- a/_includes/themes/twitter-2.0/main.html
+++ b/_includes/themes/twitter-2.0/main.html
@@ -76,6 +76,15 @@
         </div>
       </div>
 
+      <div class="container">
+        <div class="marketing">
+          <h1>imo Hackathon</h1>
+          <h2>November 9, 2012 at 5:00PM</h2>
+          <a class="btn btn-primary btn-large">Find Out More</a>
+        </div>
+      </div>
+      <br/><br/>
+
     <div class="container">
 
 
