--- a/_includes/themes/twitter-2.0/main.html
+++ b/_includes/themes/twitter-2.0/main.html
@@ -78,7 +78,7 @@
 
       <div class="container">
         <div class="marketing">
-          <h1>imo Hackathon</h1>
+          <h1>imo Hackathon@Northwestern</h1>
           <h2>November 9, 2012 at 5:00PM</h2>
           <a class="btn btn-primary btn-large" href="/imo-hackathon.html">Find Out More</a>
         </div>
