--- a/_includes/themes/twitter-2.0/imo-hackathon.html
+++ b/_includes/themes/twitter-2.0/imo-hackathon.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small></small></h1>
+  <h1>{{ page.title }} <small>November 9, 2012 at 5:00PM</small></h1>
 </div>
 
 
