added pictures and stuff

--- a/_includes/themes/twitter-2.0/index.html
+++ b/_includes/themes/twitter-2.0/index.html
@@ -2,7 +2,7 @@
   <h1>{{ page.title }} <small></small></h1>
 </div> -->
 
-<div class="row">
+<div class="container">
   <div class="span3">
     <ul class="nav nav-list">
     {% assign pages_list = site.pages %}
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="container">
   <div class="span8 offset3">
     <hr>
     {% include JB/comments %}
