--- a/_includes/themes/twitter-2.0/default.html
+++ b/_includes/themes/twitter-2.0/default.html
@@ -67,6 +67,8 @@
 
     </div> <!-- /container -->
 
+    <div style="padding-bottom:100px;"></div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ ASSET_PATH }}/js/jquery.min.js"><\/script>')</script>
     <script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
