--- a/_includes/themes/twitter-2.0/main.html
+++ b/_includes/themes/twitter-2.0/main.html
@@ -55,6 +55,9 @@
       <div class="jumbotron masthead">
         <div class="container">
           <h1>{ hack northwestern }</h1>
+          <h3>fostering student creativity, entrepreneurship, and hacker spirit</h3>
+          <p></p>
+          <p><a class="btn btn-primary btn-large" href="http://facebook.com/HackNorthwestern">Connect with us on facebook</a></p>
         </div>
       </div>
 
@@ -100,6 +103,8 @@
       </footer>
 
     </div> <!-- /container -->
+
+    <div style="padding-bottom:100px;"></div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ ASSET_PATH }}/js/jquery.min.js"><\/script>')</script>
