--- a/assets/themes/twitter-2.0/css/style.css
+++ b/assets/themes/twitter-2.0/css/style.css
@@ -79,8 +79,30 @@ html, body {
   border-top-right-radius: 0px;
 }
 
-.jumbotron h1 {
+.jumbotron h1,
+.jumbotron h2 {
   color: #fff;
+}
+.jumbotron h3 {
+  color: #ddd;
+}
+
+.masthead .btn {
+padding: 14px 24px;
+font-size: 24px;
+font-weight: 200;
+color: 
+#fff;
+border: 0;
+-webkit-border-radius: 6px;
+-moz-border-radius: 6px;
+border-radius: 6px;
+-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+-webkit-transition: none;
+-moz-transition: none;
+transition: none;
 }
 
 /* from docs.css from bootstrap  */
