--- a/_includes/themes/twitter-2.0/imo-hackathon.html
+++ b/_includes/themes/twitter-2.0/imo-hackathon.html
@@ -1,7 +1,33 @@
-<div class="page-header">
-  <h1>{{ page.title }} <small>November 9, 2012 at 5:00PM</small></h1>
-</div>
+  <div class="bs-docs-social">
+        <div class="container">
+          <ul class="bs-docs-social-buttons">
+            <li class="follow-btn">
+              <a href="https://twitter.com/hack_NU" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @hack_nu</a>
 
+            </li>
+            <li class="tweet-btn">
+              <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hacknorthwestern.com/imo-hackathon.html" data-count="horizontal" data-via="hack_nu">Tweet About This Hackathon</a>
+            </li>
+            <li class="facebook-btn">
+              <div class="fb-like" data-href="http://hacknorthwestern.com/imo-hackathon.html" data-send="true" data-layout="button_count" data-width="200" data-show-faces="false"></div>
+              
+            </li>
+          </ul>
+        </div>
+      </div>
+
+  <div class="container">
+    <div class="marketing">
+      <h1>imo Hackathon@Northwestern</h1>
+      <h2>November 9, 2012 at 5:00PM</h2>
+    </div>
+  </div>
+
+<br>
+
+<hr>
+
+<br>
 
 
 <div class="row">
@@ -28,6 +54,7 @@
   </section>
   </ul>
   </div>
+
   <div class="span8">
     {{ content }}
     <hr>
