--- a/_includes/themes/twitter-2.0/main.html
+++ b/_includes/themes/twitter-2.0/main.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
+       <meta property="og:image" content="http://hacknorthwestern.com/assets/themes/twitter-2.0/img/hn_logo.png"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -72,7 +73,7 @@
               <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hacknorthwestern.com" data-count="horizontal" data-via="hack_nu">Tweet</a>
             </li>
             <li class="facebook-btn">
-              <div class="fb-like" data-href="http://facebook.com/HackNorthwestern" data-send="true" data-layout="button_count" data-width="200" data-show-faces="false"></div>
+              <div class="fb-like" data-href="http://hacknorthwestern.com" data-send="true" data-layout="button_count" data-width="200" data-show-faces="false"></div>
               
             </li>
           </ul>
