--- a/_includes/themes/twitter-2.0/imo.html
+++ b/_includes/themes/twitter-2.0/imo.html
@@ -76,7 +76,13 @@
           </ul>
         </div>
       </div>
-
+      <div class="container">
+        <div class="marketing">
+          <h1>imo Hackathon@Northwestern</h1>
+          <h2>November 9, 2012 at 5:00PM</h2>
+        </div>
+      </div>
+      <br/><br/>
     <div class="container">
 
 
